src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AGMT__Augment_ID__c</fullName>
        <label>Augment ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGMT__Model_Name__c</fullName>
        <label>3D Model Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGMT__Model_Thumbnail__c</fullName>
        <formula>IF(ISBLANK(AGMT__Augment_ID__c),&quot;&quot;,
IF(ISBLANK(AGMT__Thumbnail__c), IMAGE(&quot;/resource/1423784508000/AGMT__placeholder_thumbnail&quot;,&quot;Model Thumbnail&quot;,100,100),
IMAGE(AGMT__Thumbnail__c, &quot;Model Thumbnail&quot;,100,100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3D Model Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGMT__Thumbnail__c</fullName>
        <label>Thumbnail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>